--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 }
 
 body{
-    font-family: sans-serif;
-    background-color: #f7f9fc;
+    font-family: system-ui, sans-serif;
+    background-image:linear-gradient(to bottom,white,#5e94e6);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -21,9 +21,9 @@ body{
 }
 
 h1{
-    color: #333;
+    color: #151515;
     margin-bottom: 20px;
-    font-size: 2rem;
+    font-size: 2.5rem;
     border-bottom:#555 5px solid;
     padding-bottom: 15px;
 
@@ -79,9 +79,9 @@ h1{
 }
 
 .list{
-    background-color: lightgray;
+    background-color: rgb(243, 243, 243);
     padding: 1rem;
-    border-radius: 8px;
+    border-radius: 20px;
     width: 30%;
     min-height: 400px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
